# real-world-haskell-cn

./: .gitignore  CNAME  Makefile  README  README.html  README.rst  conf.py  convention.html  convention.rst  genindex.html  index.html  index.rst  make.bat  objects.inv  requirements.txt  search.html  searchindex.js  zh_CN.json
_sources/: README.txt  convention.txt
_sources/chp/: 1.txt  10.txt  13.txt  2.txt  20.txt  22.txt  24.txt  28.txt  3.txt  4.txt  5.txt  7.txt  9.txt
_static/: haiku.css
chp/: 1.html  1.rst  10.html  10.rst  11.html  11.rst  12.html  12.rst  13.html  13.rst  14.html  14.rst  15.html  15.rst  16.html  16.md  16.rst  17.rst  18.html  18.rst  19.html  19.rst  2.html  2.rst  20.html  20.rst  21.html  21.rst  22.html  22.rst  23.html  23.rst  24.html  24.rst  25.html  25.rst  26.html  26.rst  27.html  27.rst  (+16 more)
code/ch01/: WC.hs  quux.txt
code/ch02/: Assign.hs  RoundToEven.hs  Take.hs  add.hs  isOdd.hs  myDrop.hs  myDropSign.hs  myDropX.hs
code/ch03/: AlgebraicVector.hs  BookStore.hs  Bool.hs  Distinction.hs  Intersperse.hs  Roygbiv.hs  ShapeUnion.hs  complicated.hs  myNot.hs  sumList.hs  third.hs
code/ch04/: Adler32.hs  EfficientList.hs  FixLines  FixLines.hs  IntParse.hs  InteractWith  InteractWith.hi  InteractWith.hs  Plus.hs  SplitLines.hs  append.hs  compose.hs  dlts.hs  dlts2.hs  filter.hs  foldl.hs  foldlSum.hs  foldr.hs  identity.hs  isInAny.hs  isInAny2.hs  isInAny3.hs  myMap.hs  (+18 more)
code/ch05/: Main.hs  Prettify.hs  PrettyJson.hs  PrettyStub.hs  PutJSON.hs  SimpleJSON.hs  Trouble.hs  mypretty.cabal
haiku_mk2/: disqus.html  layout.html
(+211 files in other folders)
